vlib/v/checker/tests/minus_op_wrong_right_type_err_b.out
vlib/v/checker/tests/minus_op_wrong_right_type_err_b.v:2:18: error: mismatched types `any_int` and `[]int`
    1 | fn main() {
    2 |     println(10 - [1,2,3])
      |                  ~~~~~~~
    3 | }
